Fixes jagged subtitle animation

--- a/demo/res/values/strings.xml
+++ b/demo/res/values/strings.xml
@@ -79,4 +79,24 @@
         <item>medium</item>
         <item>large</item>
     </string-array>
+
+    <string-array name="gravities">
+        <item>Left</item>
+        <item>Top</item>
+        <item>Right</item>
+        <item>Bottom</item>
+        <item>Center</item>
+        <item>Center horizontal</item>
+        <item>Center vertical</item>
+    </string-array>
+
+    <string-array name="gravity_values">
+        <item>3</item>
+        <item>48</item>
+        <item>5</item>
+        <item>80</item>
+        <item>17</item>
+        <item>1</item>
+        <item>16</item>
+    </string-array>
 </resources>
